# fastsurfer_bids_app

./: README.md  pyproject.toml
docs/: conf.py
docs/getting_started/: installation.md
docs/usage/: app_cli.md
fastsurfer_bidsapp/: pipeline_description.json
fastsurfer_bidsapp/config/: .snakebids.yml.swp  snakebids.yml
fastsurfer_bidsapp/workflow/: .Snakefile.swp  Snakefile
freesurfer_bidsapp/: pipeline_description.json  run.py
freesurfer_bidsapp/config/: snakebids.yml
freesurfer_bidsapp/workflow/: Snakefile
